<resources>
    <string name="app_name">Calculo de Vazão</string>
    <string name="label_distancia_bicos">Distância entre os bicos:</string>

    <string-array name="spinner_distancia_bicos">
        <item>0,60m</item>
        <item>0,50m</item>
        <item>0,40m</item>
        <item>0,35m</item>
    </string-array>

    <string name="label_vazao">Vazão(L/min):</string>
    <string name="button_text">Calcular Volume</string>
    <string name="label_velocidade">Velocidade Média de Pulverização(Km/h):</string>
    <string name="label_volume">Volume de Pulverização:</string>

    <string name="text_instrucoes">
        <b>Uso das Fórmulas</b>
        \n\n
        Para utilize a aba calcular para utilizar as fórmulas para calcular o volume da pulverização!
        É necessário conhecimento da vação (L/min) a distancia entre os bicos e a velocidade de pulverização (Km/h).
        \n\n\n

        <b>Método Prático</b>
        \n\n
        Pode-se utilizar o método prático para o cálculo do volume de pulverização.
        Para isso calcule o tempo gasto para pulverizar 50m, então colete o volume de pulverização pelo mesmo tempo.

    </string>
</resources>
