<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_distancia_bicos"
        android:id="@+id/label_distancia" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_distancia_bicos"
        android:layout_below="@+id/label_distancia"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:spinnerMode="dropdown" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/spinner_distancia_bicos"
        android:text="@string/label_vazao"
        android:id="@+id/label_vazao" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:text=""
        android:ems="10"
        android:id="@+id/text_vazao"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/label_vazao" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_velocidade"
        android:id="@+id/label_velocidade"
        android:layout_below="@+id/text_vazao" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:text=""
        android:ems="10"
        android:id="@+id/text_velocidade"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/label_velocidade" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_text"
        android:id="@+id/button"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/text_velocidade"
        android:layout_alignEnd="@+id/text_velocidade"
        android:layout_below="@+id/text_velocidade" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/label_volume"
        android:id="@+id/label_volume"
        android:layout_below="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/text_volume"
        android:layout_below="@+id/label_volume"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
